Adjust REST service for proper Swagger generation, relocate mappers
